--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -131,6 +131,27 @@ jobs:
     - run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
       shell: bash
 
+    - name: Discover and Clone Modules
+      run: |
+        mkdir -p modules
+        grep -r 'source *= *"git::' . | while read -r line; do
+          module_path=$(echo "$line" | cut -d':' -f1)
+          repo_url=$(echo "$line" | sed -n 's/.*source *= *"git::\([^"]*\)".*/\1/p')
+          module_dir="modules/$(basename "$repo_url" | cut -d'?' -f1 | cut -d'.' -f1)"
+          echo "Cloning $repo_url into $module_dir"
+          git clone "$repo_url" "$module_dir"
+        done
+
+    - name: Generate lambda.zip for Modules
+      run: |
+        find modules -type d -name 'lambda' | while read -r lambda_dir; do
+          zip_file="${lambda_dir%/lambda}/lambda.zip"
+          echo "Generating $zip_file from $lambda_dir"
+          cd "$lambda_dir"
+          zip -r "../lambda.zip" .
+          cd - > /dev/null
+        done
+
     # Install the latest version of Terraform CLI
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
@@ -256,6 +277,10 @@ jobs:
           -H "Content-Type: application/json" \
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -d @comment3.txt
+
+    - name: Cleanup lambda.zip Files
+      run: |
+        find modules -type f -name 'lambda.zip' -delete
 
   logging:
     name: 'Save logs'
