--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -28,15 +28,14 @@ on:
         type: string
         default: "."
 
-
 jobs:
   check-changes:
-    runs-on: arvato
+    runs-on: ubuntu-latest
     outputs:
       stack_changed: ${{ steps.filter.outputs.stack_changed }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Important to fetch all history for branches
 
@@ -68,40 +67,17 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: bash
 
-      - name: Set output
-        run: |
-          echo "Final stack_changed value: ${{ env.stack_changed }}"
-          echo "stack_changed=${{ env.stack_changed }}" >> $GITHUB_OUTPUT
-      - name: Debug stack_changed output
-        run: |
-          echo "stack_changed set to: ${{ steps.filter.outputs.stack_changed }}"
-        if: always()
-
   terraform:
     needs: check-changes
     if: needs.check-changes.outputs.stack_changed == 'true'
-    name: 'Apply Terraform'
-    runs-on: arvato
-    outputs:
-      output1: ${{ steps.job.outputs.job_id }}
+    runs-on: ubuntu-latest
     permissions:
       actions: read
       id-token: write
       contents: write
       pull-requests: write
-    defaults:
-      run:
-        shell: bash
 
     steps:
-    # Expose and capture the job ID of the current job
-    - uses: ReeganExE/github-action-job-id@v1.0
-    - name: Job ID output
-      id: job
-      run: |
-        echo ${GH_JOB_0_ID}
-        echo "job_id=$GH_JOB_0_ID" >> $GITHUB_OUTPUT
-
     # Assume the role in AWS to roll out the changes
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -128,47 +104,12 @@ jobs:
       uses: actions/checkout@v4
       with:
         ref: refs/pull/${{ inputs.github_event_number }}/merge
-    - run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
-      shell: bash
 
-    - name: Discover and Clone Modules
-      run: |
-        mkdir -p modules
-        grep -r 'source *= *"git::' . | while read -r line; do
-          module_path=$(echo "$line" | cut -d':' -f1)
-          repo_url=$(echo "$line" | sed -n 's/.*source *= *"git::\([^"]*\)".*/\1/p' | cut -d'?' -f1)
-          ref=$(echo "$line" | sed -n 's/.*source *= *"git::\([^"]*\)".*/\1/p' | grep -oP '(?<=\?ref=).*$')
-          module_dir="modules/$(basename "$repo_url" | cut -d'.' -f1)"
-          if [ ! -d "$module_dir" ]; then
-            echo "Cloning $repo_url into $module_dir"
-            git clone "$repo_url" "$module_dir"
-            if [ -n "$ref" ]; then
-              cd "$module_dir"
-              if git ls-remote --exit-code --heads "$repo_url" "$ref" || git ls-remote --exit-code --tags "$repo_url" "$ref"; then
-                git checkout "$ref"
-              else
-                echo "Reference $ref not found in $repo_url"
-              fi
-              cd -
-            fi
-          else
-            echo "Directory $module_dir already exists, skipping clone."
-          fi
-        done
-
-    - name: Generate lambda.zip for Modules
-      run: |
-        find modules -type d -name 'lambda' | while read -r lambda_dir; do
-          zip_file="${lambda_dir%/lambda}/lambda.zip"
-          echo "Generating $zip_file from $lambda_dir"
-          if [ -d "$lambda_dir" ]; then
-            cd "$lambda_dir"
-            zip -r "../lambda.zip" .
-            cd - > /dev/null
-          else
-            echo "Directory $lambda_dir does not exist, skipping ZIP generation."
-          fi
-        done
+    - name: Download Lambda ZIPs
+      uses: actions/download-artifact@v3
+      with:
+        name: lambda-zips
+        path: .
 
     # Install the latest version of Terraform CLI
     - name: Setup Terraform
@@ -182,52 +123,21 @@ jobs:
         cd ${{ inputs.stack }}
         terraform init -upgrade
 
-    # Terraform Validation Steps
-    - name: terraform validate ${{ inputs.stack }}
-      uses: dflook/terraform-validate@v1
-      with:
-        path: ${{ inputs.stack }}
-      env:
-        TERRAFORM_HTTP_CREDENTIALS: |
-          github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
-        GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        TERRAFORM_ACTIONS_GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        GITHUB_APP_ID: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
-        GITHUB_APP_PEM_FILE: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
-    - name: terraform fmt ${{ inputs.stack }}
-      uses: dflook/terraform-fmt-check@v1
-      with:
-        path: ${{ inputs.stack }}
-      env:
-        TERRAFORM_HTTP_CREDENTIALS: |
-          github.com/arvatoaws=oauth:${{ steps.generate-token.outputs.token }}
-        GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        TERRAFORM_ACTIONS_GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
-        GITHUB_APP_ID: ${{ secrets.TERRAFORM_GITHUB_ACTION_APP_ID }}
-        GITHUB_APP_PEM_FILE: ${{ secrets.TERRAFORM_GITHUB_ACTION_PRIVATE_KEY }}
-
     # Download the plan from S3
     - name: Download Plan from S3
       run: |
         cd ${{ inputs.stack }}
         aws s3 cp s3://${{ inputs.s3bucketName }}/plans/${{ github.repository }}/${{ inputs.stack }}/${{ inputs.github_event_number }}/tfplan ./tfplan
 
-    # Build or change infrastructure according to Terraform configuration files
+    # Apply the Terraform plan
     - name: Terraform Apply
       id: apply
-      continue-on-error: true
       run: |
         cd ${{ inputs.stack }}
         terraform apply -input=false -no-color tfplan
-    # Upload the plan to S3
-    - name: Upload Plan to S3
-      run: |
-        cd ${{ inputs.stack }}
-        aws s3 cp ./tfplan s3://${{ inputs.s3bucketName }}/plans/${{ github.repository }}/${{ inputs.stack }}/${{ inputs.github_event_number }}/
 
-    # CONCLUDE
-    # If the apply was successful, post a comment with the applied output
-    - name: Post Plan and Apply to GitHub PR
+    # Post a comment with the apply outputs and add the 'applied' label
+    - name: Post Apply to GitHub PR
       if: steps.apply.outcome == 'success'
       env:
         URL: ${{ inputs.github_event_issue_comments_url }}
@@ -251,83 +161,7 @@ jobs:
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -d '["applied"]'
 
-    # If the apply was successful, merge the branch into the main
-    # commented out for testing, eventually one of the solution for fixing fails and merging in multiple environments is disabling auto-merge
-    # - name: Merge into main
-    #   if: steps.apply.outcome == 'success'
-    #   env:
-    #     URL: ${{ inputs.github_event_repository_url }}/pulls/${{ inputs.github_event_number }}/merge
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   run: |
-    #     cd ${{ inputs.stack }}
-    #     curl \
-    #     -X PUT \
-    #     $URL \
-    #     -H "Content-Type: application/json" \
-    #     -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-    #     -d '{"commit_title":"terraform update applied"}'
-
-    # remove the organization plan from S3 whether successful or not
-    - name: Delete Plan from S3
-      run: |
-        cd ${{ inputs.stack }}
-        aws s3 rm --recursive s3://${{ inputs.s3bucketName }}/plans/${{ github.repository }}/${{ inputs.stack }}/${{ inputs.github_event_number }}
-
-    # If the apply failed, post the errors
-    - name: Post Organization Apply Failure
-      if: steps.apply.outcome == 'failure'
-      env:
-        URL: ${{ inputs.github_event_issue_comments_url }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        cd ${{ inputs.stack }}
-        (printf "Apply failed for ${{ inputs.stack }} environment:\n\n**Standard Output:**\n\n\`\`\`" && 
-        echo -n '${{ steps.apply.outputs.stdout }}' &&
-        printf "\`\`\`\n\n**Error Output:**\n\n\`\`\`" &&
-        echo -n '${{ steps.apply.outputs.stderr }}' &&
-        printf "\`\`\`\n\n") > comment.txt
-        jq -R -s '.' < comment.txt > comment2.txt
-        truncate -s -1 comment2.txt
-        (echo -n '{ "body": ' && cat comment2.txt && echo -n ' }') > comment3.txt
-        curl \
-          -X POST \
-          $URL \
-          -H "Content-Type: application/json" \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -d @comment3.txt
-
+    # Cleanup lambda.zip files
     - name: Cleanup lambda.zip Files
       run: |
-        find modules -type f -name 'lambda.zip' -delete
-
-  logging:
-    name: 'Save logs'
-    needs: terraform
-    runs-on: arvato
-    if: always() # This job will always run
-    permissions:
-      actions: read
-      id-token: write
-      contents: read
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-
-    # Assume the role in AWS to upload the logs
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-region: ${{ inputs.region }}
-        role-to-assume: ${{ inputs.roleArn }}
-
-    # Save previous job logs and upload to s3
-    - name: Retrieve log file and upload to s3
-      run: |
-        TIMESTAMP=$(date +'%Y-%m-%d-%H:%M:%S')
-        LOG_FILENAME="TerraformApply_${{ inputs.github_event_number }}_PR_$TIMESTAMP.txt"
-        # Get log file
-        gh api repos/{owner}/{repo}/actions/jobs/${{ needs.terraform.outputs.output1 }}/logs > $LOG_FILENAME
-        # Upload it to s3
-        aws s3 cp $LOG_FILENAME s3://${{ inputs.s3bucketName }}/logs/Apply/
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        find . -type f -name 'lambda.zip' -delete
