--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -137,6 +137,9 @@ jobs:
         name: lambda-zips
         path: .
 
+    - name: List downloaded files
+      run: ls -al .
+
     # Install the latest version of Terraform CLI
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
