--- a/.github/workflows/githubaction-comment-apply.yml
+++ b/.github/workflows/githubaction-comment-apply.yml
@@ -131,13 +131,18 @@ jobs:
     - run: echo "REPOSITORY_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
       shell: bash
 
+    - name: Verify GH_TOKEN
+      run: echo "GH_TOKEN is set"
+
     - name: Retrieve Plan Run ID from PR Comment
       id: get-run-id
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         PR_NUMBER=${{ inputs.github_event_number }}
-        RUN_ID=$(gh pr view $PR_NUMBER --json body -q '.body' | grep -o 'run_id=[0-9]*' | cut -d= -f2)
+        echo "Fetching PR details for PR #$PR_NUMBER"
+        gh pr view $PR_NUMBER --json body --jq '.body' || exit 1
+        RUN_ID=$(gh pr view $PR_NUMBER --json body --jq '.body' | grep -o 'run_id=[0-9]*' | cut -d= -f2)
         echo "run_id=$RUN_ID" >> $GITHUB_ENV
         echo "::set-output name=run_id::$RUN_ID"
 
